--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # OpenAI API Key (for LLM extraction)
 OPENAI_API_KEY=your-openai-api-key-here
 
+# Google API (for company website lookup via Knowledge Graph + Custom Search)
+GOOGLE_API_KEY=your-google-api-key-here
+GOOGLE_CSE_ID=your-custom-search-engine-id-here
+
 # Google Custom Search API (for deal article discovery)
 GOOGLE_DEAL_API_KEY=your-google-api-key-here
 GOOGLE_DEAL_CX=your-custom-search-engine-id-here
